--- a/public/error.html
+++ b/public/error.html
@@ -3,6 +3,8 @@
 <meta charset="UTF-8">
 
 <body>
-Hallo
+    <div className='errorPage-main'>
+        <div className='error-massage'>Error ! Page not found</div>
+    </div>
 </body>
 </html>
