error page fertig gugt aba biz ranzig us+

--- a/public/ErrorPage.html
+++ b/public/ErrorPage.html
@@ -2,11 +2,15 @@
   <html>
     <head>
       <meta charset="UTF-8">
-      <link rel="stylesheet" href="./ErrorPage.css">
+      <link rel="stylesheet" href="style.css">
     </head>
     <body>
-      <div className='errorPage-main'>
-      <div className='error-massage'>Error ! Page not found</div>
+      <div class='errorPage-main'>
+      <img src="Bier-gif.gif" class="bier-gif">
+      <div class='error-massage'>Error ! Page not found</div>
+      <div class="home-button">
+        <a class="home-link" href="https://www.alladWeitar.at/">Home</a>
+      </div>
     </div>
   </body>
 </html>
