--- a/public/ErrorPage.html
+++ b/public/ErrorPage.html
@@ -9,7 +9,7 @@
       <img src="Bier-gif.gif" class="bier-gif">
       <div class='error-massage'>Error ! Page not found</div>
       <div class="home-button">
-        <a class="home-link" href="https://www.alladWeitar.at/">Home</a>
+        <a class="home-link" href="https://www.alladWeitar.at/">HomePage</a>
       </div>
     </div>
   </body>
